Gaim: The Pimpin' Penguin IM Client that's good for the soul!

version 0.82 (08/26/2004):
	New Features:
	* Ability to specify a custom character set for messages sent to ICQ
	  users and messages received from ICQ users
	* Ability to edit your current away message (Rhett Robinson)
	* Topics in the conversation window (not the topic field at the
	  top) with URLs will now appear as links (Stu Tomlinson)
	* File transfers appear in the file transfer window when they
	  are initiated rather than when they begin transferring (Dave West)
	* Instead of toggling slash commands on/off, you can now toggle
	  passing through unknown slash commands on/off.

	Bug Fixes:
	* Joining a Jabber chat no longer causes a crash (Stu Tomlinson)
	* Selecting a buddy icon for a brand new account no longer
	  causes a crash
	* Better file transfer error messages (Dave West)
	* Remotely canceled file transfers in MSN are now noticed, so that we
	  don't accidentally cancel the file transfer and crash Gaim
	  (Felipe Contreras)
	* Protocols that don't support joining chat rooms by name no longer
	  allow chat rooms to be added to the buddy list (Felipe Contreras)
	* Delayed messages and system messages no longer cause
	  sound events to be triggered (Nathan Fredrickson)
	* The chat invite button has a correct label (Stu Tomlinson)
	* The system log should leak fewer file descriptors (Ka-Hing Cheung)
	* Buddy list tooltips display in more appropriate positions when
	  using multiple monitors (Dave West)
	* Better parsing of URLs containing special characters
	* All users are shown when joining a Yahoo! conference (Bleeter Yaluser)
	* You now leave all Yahoo! conferences when you log out of Yahoo!
	* Buddy Icon updating bug fixed (Felipe Contreras)

version 0.81 (08/05/2004):
	New Features:
	* The autorecon plugin will somewhat remember state information(Yosef
	  Radchenko)
	* Visual display of ops/voice/halfops/so on in Chats (Stu Tomlinson)