@@ -2,6 +2,8 @@ Gaim: The Pimpin' Penguin IM Client that's good for the soul!
 
 version 0.82 (08/26/2004):
 	New Features:
+	* Ability to set available messages for AIM
+	  (Tools->Account Actions->Set Available Message...)
 	* Ability to specify a custom character set for messages sent to ICQ
 	  users and messages received from ICQ users
 	* Ability to edit your current away message (Rhett Robinson)
